# avfun

./: .gitignore  CMakeLists.txt  README.md
android_player/: settings.gradle
android_player/AVFunCore/: build.gradle
android_player/AVFunCore/src/androidTest/java/com/avfuncore/: ExampleInstrumentedTest.java
android_player/AVFunCore/src/main/: AndroidManifest.xml
android_player/AVFunCore/src/main/cpp/: AVPlayer.cpp  AVPlayer.h  CMakeLists.txt  EglThread.cpp  EglThread.h  GLContext.cpp  GLContext.h  LogUtil.h  VideoFrameBuffer.cpp  VideoFrameBuffer.h  avfun_Context.cpp  avfun_Player.cpp  com_avfuncore_AVFContext.cpp  com_avfuncore_AVFPlayer.cpp
android_player/AVFunCore/src/main/cpp/render/: GLTexture.h
android_player/AVFunCore/src/main/cpp/render/glad/linux/glad/: glad.h
android_player/AVFunCore/src/main/java/com/avfuncore/: AVFContext.java  AVFPlayer.java
android_player/AVFunCore/src/main/java/com/avfuncore/view/: AVFSurfaceView.java
android_player/AVFunCore/src/test/java/com/avfuncore/: ExampleUnitTest.java
android_player/app/: build.gradle
android_player/app/src/androidTest/java/com/example/avfunplayer/: ExampleInstrumentedTest.java
android_player/app/src/main/: AndroidManifest.xml
android_player/app/src/main/java/com/example/avfunplayer/: MainActivity.java
android_player/app/src/main/res/layout/: activity_main.xml
android_player/app/src/main/res/values/: strings.xml  themes.xml
android_player/app/src/main/res/values-night/: themes.xml
android_player/app/src/test/java/com/example/avfunplayer/: ExampleUnitTest.java
android_player/gradle/wrapper/: gradle-wrapper.properties
avfun/: AVCommon.h  AVPlayer.cpp  AVPlayer.h  AVPlayerAndroid.cpp  AVProducter.cpp  AVProducter.h  AVStream.cpp  AVVideoStream.cpp  AVVideoStream.h  CMakeLists.txt  LogUtil.h  Utils.h
avfun/codec/: AVAudioReader.cpp  AVAudioReader.h  AVAudioResample.h  AVFAudioReader.cpp  AVFAudioReader.h  AVFAudioResample.cpp  AVFAudioResample.h  AVFBuffer.h  AVFReader.h  AVFVideoReader.cpp  AVFVideoReader.h  AVVideoFrame.cpp  AVVideoFrame.h  AVVideoReader.cpp  AVVideoReader.h  ffmpeg_config.h
avfun/codec/android/: AVFAudioReader.cpp  AVFVideoReader.cpp
avfun/example/: example01.cpp  example02.cpp  example03.cpp  example04.cpp
avfun/example/ffplay/: CMakeLists.txt  cmdutils.c  cmdutils.h  ffplay.c
avfun/render/: GLProgram.cpp  GLProgram.h  GLTexture.cpp  GLTexture.h
avfun/render/glad/android/: glad.c
avfun/render/glad/android/glad/: glad.h
avfun/render/glad/linux/: glad.c
avfun/render/glad/mac/: glad.c
avfun/render/glad/mac/glad/: glad.h
avfun/render/glad/win/: glad.c
avfun/render/glad/win/glad/: glad.h
cmake/: ffmpeg.cmake  libyuv.cmake  opencv.cmake  platform.cmake  sdl.cmake  utils.cmake
codec/: AVAudioBuffer.cpp  AVAudioBuffer.h  AVAudioFrame.cpp  AVAudioFrame.h  AVAudioReader.cpp  AVAudioResample.cpp  AVAudioResample.h  AVCommon.h  AVStream.h  AVVideoFrame.cpp  AVVideoFrame.h  AVVideoReader.cpp  AVVideoReader.h  AVVideoStream.cpp  CMakeLists.txt  LogUtil.h  ffmpeg_config.h
codec/example/: example01.cpp  example02.cpp
win_player/: App.cpp  App.h  CMakeLists.txt  ControlView.cpp  ControlView.h  DisplayView.cpp  DisplayView.h  MainWindow.cpp  MainWindow.h  SurfaceView.cpp  SurfaceView.h  icon.inl  main.cpp
